Bug 2019163 - [Nova] Update icon spacing in urlbar quick actions. r=dao,desktop-theme-reviewers,urlbar-reviewers
The Figma uses a literal 8px but it seems better to use a `space` variable.
`--space-medium` matches 8px pretty well. On Windows 11 with standard scaling,
it ends up being 9px. On Mac, it's 8x, although it slightly changes the subpixel
rendering of the quick action's text compared to a hardcoded 8px.

Depends on D306367

Differential Revision: https://phabricator.services.mozilla.com/D306565

--- a/browser/themes/shared/urlbar/view-nova.css
+++ b/browser/themes/shared/urlbar/view-nova.css
@@ -1119,7 +1119,7 @@
   > img {
     width: 16px;
     height: 16px;
-    margin-inline-end: 0.4em;
+    margin-inline-end: var(--space-medium);
     -moz-context-properties: fill, fill-opacity;
   }
 
